syntax = "proto3";
package service;
option java_package = "org.qmstr.grpc.service";

import weak "qmstr/service/datamodel.proto";

message AnalyzerConfigRequest {
    int32 analyzerID = 1;
}

message AnalyzerConfigResponse {
    map<string, string> configMap = 2;
    repeated PathSubstitution pathSub = 3;
    int64 token = 4;
    string session = 5;
    string name = 6;
}

message InfoNodeMessage {
    int64 token = 1;
    string uid = 2;
    InfoNode infonode = 3;
}

message FileNodeMessage {
    int64 token = 1;
    string uid = 2;
    FileNode filenode = 3;
}

message SendResponse {
    bool success = 1;
}

service AnalysisService {
    rpc GetAnalyzerConfig(AnalyzerConfigRequest) returns (AnalyzerConfigResponse) {}
    rpc SendInfoNodes(stream InfoNodeMessage) returns (SendResponse) {}
    rpc SendFileNodes(stream FileNodeMessage) returns (SendResponse) {}
}