syntax = "proto3";
package service;
option java_package = "org.qmstr.grpc.service";

import weak "qmstr/service/datamodel.proto";

message LogMessage {
  bytes msg = 1;
}

message LogResponse {
  bool success = 1;
}

message QuitMessage {
  bool kill = 1;
}

message QuitResponse {
  bool success = 1;
}

message SwitchPhaseMessage {
  Phase phase = 1;
}

message SwitchPhaseResponse {
  bool success = 1;
  string error = 2;
}

message PackageRequest {
  string session = 1;
}

message StatusMessage {
  bool phase = 1;
  bool switch = 2;
}

message StatusResponse {
  string phase = 1;
  Phase phaseID = 2;
  bool switching = 3;
  string error = 4;
}

message EventMessage {
  string class = 1;
}

service ControlService {
  rpc Log(LogMessage) returns (LogResponse) {}
  rpc Quit(QuitMessage) returns (QuitResponse) {}
  rpc SwitchPhase(SwitchPhaseMessage) returns (SwitchPhaseResponse) {}
  rpc GetPackageNode(PackageRequest) returns (PackageNode) {}
  rpc GetFileNode(FileNode) returns (stream FileNode) {}
  rpc Status(StatusMessage) returns (StatusResponse) {}
  rpc SubscribeEvents(EventMessage) returns (stream Event) {}
}